...
import com.purecipes.feature.recipedetails.domain.usecase.GetRecipeDetailsUseCase
import com.purecipes.shared.domain.model.RecipeDetails
import com.purecipes.shared.ui.component.BackNavigationButton
import com.purecipes.shared.ui.component.CenteredMessageContent
import com.purecipes.shared.ui.theme.PurecipesTheme

internal const val STEP_BY_STEP_CURRENT_STEP_TEXT_TAG = "stepByStepCurrentStepText"

@Composable
fun StepByStepCookingRoute(
	recipeId: Int,
	getRecipeDetails: GetRecipeDetailsUseCase,
	getMeasurementPreferences: GetMeasurementPreferencesUseCase,
...
